<resources>
    <string name="app_name">Floricultura canto da flores</string>
    <string name="login">Canto das flores</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="celular">Celular</string>
    <string name="j_fez_cadastro">Já fez cadastro?</string>
    <string name="inicio">Inicio</string>
    <string name="cadastro">Cadastro</string>
    <string name="confirma">Confirma senha</string>
    <string name="informe_seu_e_mail_que_enviaremos_num_link_para_altera_o_da_senha">Informe seu e-mail que enviaremos \num link para alteração da senha.</string>
    <string name="voltar">Voltar</string>
    <string name="j_enviou">Já recuperou senha?</string>
    <string name="recuperar">Recuperar</string>
    <string name="perfil">Perfil</string>
    <string name="pedidos">Pedidos</string>
    <string name="termos">Termos</string>
    <string name="ajuda">Ajuda</string>
    <string name="deslogar">Deslogar</string>
    <string name="sair">Sair</string>
    <string name="EntrarApp">Login</string>
    <string name="pre_o">Preço</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="n_o_quer_finalizar">Não quer finalizar?</string>
    <string name="Titulo_pagamento">Preencha todos os campos antes de fazer o pagamento</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_rua_numero">Rua / Numero</string>
    <string name="hint_cidade_estardo">Cidade / Estardo</string>
    <string name="hint_celular">Celular</string>
    <string name="text_fazer_pagamento">Fazer pagamento</string>
</resources>