<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Pagamento.PagamentoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo_pagamento"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        />

    <EditText
        android:id="@+id/ed_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_bairro"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/ed_Rua_Numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rua_numero"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />


    <EditText
        android:id="@+id/ed_Cidade_Estado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_cidade_estardo"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/ed_Celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_celular"
        android:padding="15dp"
        android:maxLength="11"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    
    <Button
        android:id="@+id/bt_fazer_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_fazer_pagamento"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        />

</LinearLayout>