<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetalheProdutos.DetalheProdutosActivity">

    <ImageView
        android:id="@+id/dt_fotoProduto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/placeholder_form_categorias"
        android:scaleType="centerCrop"

        />

    <TextView
        android:id="@+id/dt_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Orquideas vermelhas e brancas"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pre_o"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"

        />

    <TextView
        android:id="@+id/dt_precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200,00"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"

        />

    <Button
        android:id="@+id/btn_finalizarPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_pedido"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_o_quer_finalizar"
            android:textColor="@color/grayClaro" />

        <TextView
            android:id="@+id/btn_cancelaFnalizarPedido"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingVertical="16dp"
            android:text="@string/voltar"
            android:textColor="@color/green"
            android:textStyle="bold" />


    </LinearLayout>



</LinearLayout>